--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,13 @@ cryptography
 argon2-cffi
 python-multipart
 uvicorn
-gunicorn
+gunicorn ; platform_system!="Windows"
 asyncpg
 redis
 icecream
 httpx
 python-dotenv
 aiosmtplib
-uvloop
+uvloop ; platform_system!="Windows"
 jinja2
+pytz
